--- a/src/App.scss
+++ b/src/App.scss
@@ -21,14 +21,14 @@ body {
   float: left;
 }
 .tabs.is-toggle a {
-  color: #86d0f7;
+  color: #065aa2;;
   border: 3px solid transparent;
   border-top: none;
   border-bottom: none;
 }
 .tabs.is-toggle li.is-active a {
   background-color: #fff;
-  color: #86d0f7;
+  color: #065aa2;;
   border: 3px solid #065aa2;
   border-top: none;
   border-bottom: none;
